--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello Noah Weyer
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>CSCE 190: Noah Weyer</title>
+    </head>
+    <h1>Noah Weyer's CSCE 190 Webpage</h1>
+
+    <p>I &hearts; coding!</p>
+</html>
