--- a/index.html
+++ b/index.html
@@ -5,5 +5,16 @@
     </head>
     <h1>Noah Weyer's CSCE 190 Webpage</h1>
 
-    <p>I &hearts; coding!</p>
+    <p>My wpm is awful, but I still love coding</p>
+
+    <section class="assignment">
+        <a href="files/Problem Statement.pdf"><img src="images/Problem_Statement.png"></a>
+        <section class="ass-details">
+            <a href="files/Problem Statement.pdf"><h2>Problem Statement</h2></a>
+            <p>
+                The United States of America suffers from a lack of efficient public transport from state  to state. Our solution is for the country to implement more high speed railroads,  forming a nationwide network of high speed transport.
+            </p>
+            <a href="files/Problem Statement.pdf">Problem Statement PDF</a>
+        </section>
+    </section>
 </html>
